# newpy

./: .gitignore  pyproject.toml  shell.nix
